# manim-odyash-playground

./: .env.example  .gitignore  pyproject.toml  requirements-user-installed-without-versions.txt  requirements-user-installed.txt
docs/guides/: 00_project_setup.md
src/manim_odyash_playground/: manim.cfg  scene.py
src/manim_odyash_playground/media/videos/scene/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
src/media/videos/scene/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
